2006-08-09  Mike Cvet  <mcvet@redhat.com>

	* PIDMenu.java: Added.
	* PIDColumnDialog.java: Added.
	* SessionProcTreeView.java (SessionProcTreeView): Now initializes a 
	PIDColumnDialog and ProcMenu, among other new variables. Added a LifeCycle
	Listener onto the PIDColumnDialog.
	(mountProcModel): Initializes TreeViewColumn array with old and new 
	columns. Added relevant Listeners.
	(refreshTree): Added.
	(getColNames): Added.
	(load): Loads preferences for the PIDColumnDialog.
	(save): Saves preferences for the PIDColumnDialog.
	* SessionProcDataModel.java (getSession): Added.
	(addProc): Added support for virtual memory and resident set size value
	initialization.
	(procRead): Added.
	(getVszDC): Added.
	(getRssDC): Added.
	* MenuBar.java (MenuBar): Commented out some Listeners to fix a glade oops.

2006-08-08  Mike Cvet  <mcvet@redhat.com>

	* actions/RunExternal.java (RunExBlocker): Added.
	(TaskTerminatedObserver.updateTerminated): Updated to unblock the examined task when finished.
	(AttachedObserver.updateAttached): Requests a Terminating Observer on the external process.
	(execute): Creates a new RunExBlocker and requests it to attach to the incoming Task.

2006-08-08  Sami Wagiaalla  <swagiaal@redhat.com>

	* observers/TaskObserverRoot.java: Added unapply(Proc).
	added abstrace unapply(Task).
	* observers/TaskCloneObserver.java: Implemented unapply(Task).
	* observers/TaskTerminatingObserver.java: Ditto.
	* observers/TaskSyscallObserver.java: Ditto.
	* observers/TaskForkedObserver.java: Ditto.
	* observers/TaskExecObserver.java: Ditto.
	* WindowManager.java: Added programObserver dialog to the list
	of windows and to save/load.
	* SessionProcDataModel.java: Added handling for updating
	the list when new procs are added to the underlying DebugProcess.
	* MenuBar.java: Added quitFryk menu item.
	Removed editCustomObservers menu item.
	* GuiProc.java (isOwned): Added explicit check for getExec.
	* CheckedListView.java: Added getCheckedByName.